# agentmesh

./: .gitignore  AUDIT_PROMPT.md  CEO.md  CHANGELOG.md  LICENSE  OPEN_ISSUES.md  RAILWAY_DEPLOY.md  README.md  TECHNICAL_SPEC.md  deploy.sh  docker-compose.yml  fly.toml  working-desk.md
.claude/skills/release/: SKILL.md
agentmesh-js/: .gitignore  README.md  package-lock.json  package.json
agentmesh-js/.github/workflows/: ci.yml
agentmesh-js/src/: client.ts  discovery.ts
agentmesh-js/src/audit/: index.ts
agentmesh-js/src/encryption/: prekey.ts  session.ts
agentmesh-js/src/session/: index.ts
dashboard/: index.html
examples/: p2p_test.py  two_agents_test.py
examples/.test_agents/alice/: identity.json
examples/.test_agents/bob/: identity.json
openclaw-skill/: MIGRATION.md  requirements.txt  setup.py  skill.json
openclaw-skill/agentmesh/: __init__.py  audit.py  certs.py  client.py  config.py  dashboard.py  dht.py  did.py  discovery.py  encryption.py  identity.py  schemas.py  session.py  session_cache.py  transport.py
openclaw-skill/tests/: test_production.py  test_security.py
openspec/changes/audit-fixes-complete-implementation/: proposal.md  tasks.md
registry/: .env.example  .railwayignore  Cargo.toml  Dockerfile  railway.toml
registry/migrations/: 001_initial.sql  004_organizations.sql
registry/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  oauth.rs  org.rs  reputation.rs  revocation.rs
relay/: .env.example  Cargo.toml  Dockerfile  railway.toml
relay/src/: auth.rs  connection.rs  ice.rs  main.rs  types.rs
(+24 files in other folders)
