[package]
name = "agentmesh-relay"
version = "0.1.0"
edition = "2021"
description = "AgentMesh P2P Relay Server - WebSocket routing for AI agents"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
base64 = "0.21"
base58 = "0.2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
